1.1.1/_sources/CHANGELOG.rst.txt
=======================================
middleware_automation.amq Release Notes
=======================================

.. contents:: Topics


v1.1.1
======

Bugfixes
--------

- Add systemd RequiresMountsFor and unit custom template `#36 <https://github.com/ansible-middleware/amq/pull/36>`_

v1.1.0
======

Major Changes
-------------

- Allow for listing roles for users. Specify security setting match address `#19 <https://github.com/ansible-middleware/amq/pull/19>`_
- Make variable ``activemq_shared_storage_path`` represent an absolute path `#21 <https://github.com/ansible-middleware/amq/pull/21>`_

Minor Changes
-------------

- Arbitrary acceptors configuration via ``activemq_acceptors`` variable `#30 <https://github.com/ansible-middleware/amq/pull/30>`_
- Arbitrary connectors configuration via ``activemq_connectors`` variable `#31 <https://github.com/ansible-middleware/amq/pull/31>`_
- Configuration for management role access `#29 <https://github.com/ansible-middleware/amq/pull/29>`_
- Variable to config controller download/offline directory `#18 <https://github.com/ansible-middleware/amq/pull/18>`_

Breaking Changes / Porting Guide
--------------------------------

- Rename role ``amq_broker`` to ``activemq`` `#26 <https://github.com/ansible-middleware/amq/pull/26>`_
- Rename variables prefix to ``activemq_`` `#11 <https://github.com/ansible-middleware/amq/pull/11>`_

Bugfixes
--------

- Add ``become_user`` to artemis commands `#17 <https://github.com/ansible-middleware/amq/pull/17>`_
- Correctly set etc path and allow cors config for jolokia `#24 <https://github.com/ansible-middleware/amq/pull/24>`_
- Implement idempotent user password hashes `#25 <https://github.com/ansible-middleware/amq/pull/25>`_
- Update ``activemq_java_opts`` to be same as activemq defaults `#20 <https://github.com/ansible-middleware/amq/pull/20>`_

v1.0.0
======

Minor Changes
-------------

- Configuration for users and roles `#7 <https://github.com/ansible-middleware/amq/pull/7>`_
- Perform artemis post-upgrade operations on existing instances `#8 <https://github.com/ansible-middleware/amq/pull/8>`_

v0.0.3
======

Minor Changes
-------------

- Add prometheus metrics export plugin `#6 <https://github.com/ansible-middleware/amq/pull/6>`_
- Add vars and template for logging configuration `#4 <https://github.com/ansible-middleware/amq/pull/4>`_
- Add vars for prometheus_jmx_exporter setup `#5 <https://github.com/ansible-middleware/amq/pull/5>`_

v0.0.2
======

Major Changes
-------------

- amq_broker: configuration of static cluster `#3 <https://github.com/ansible-middleware/amq/pull/3>`_

v0.0.1
======

Minor Changes
-------------

- Import artemis create configuration tasks `#1 <https://github.com/ansible-middleware/amq/pull/1>`_
